--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,76 @@ html {
   max-width: 26rem;
   margin-right: auto;
   margin-left: auto;
+  background-color: rgb(252, 248, 248);
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+#formik {
+  background-color: white;
+  box-shadow: -5px 6px 15px 0 rgb(112, 112, 112);
+  border-radius: 5px;
+  padding: 20px;
+  margin: 3rem;
+  margin-top: -6rem;
+  padding-top: 7rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.round {
+  border-radius: 50%;
+}
+
+.big-size {
+  width: 100px;
+  height: 100px;
+  background: linear-gradient(135deg, white, grey);
+  box-shadow: -5px 6px 15px 0 rgb(112, 112, 112);
+  z-index: 2;
+  padding: 12.5px;
+  margin: 1rem auto;
+}
+
+.medium-size {
+  width: 75px;
+  height: 75px;
+  background: linear-gradient(230deg, white, grey);
+  box-shadow: -5px 6px 15px 0 rgb(112, 112, 112);
+  z-index: 3;
+  text-align: center;
+  padding: 15px;
+}
+
+h1 {
+  color: rgb(42, 37, 79);
+  text-align: center;
+  font-size: 1.3rem;
+}
+
+input {
+  color: white;
+  background-color: rgb(74, 70, 108);
+  border-radius: 5px;
+  padding: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0;
+}
+
+button {
+  color: white;
+  background-color: rgb(42, 37, 79);
+  border-radius: 7px;
+  padding: 0.5rem;
+  margin-left: auto;
+  margin-right: auto;
+  border: 0;
+}
+
+::placeholder {
+  color: white;
 }
 
 header {
